xwayland cvt handling incongruent.
In xwayland-cvt.c, xwayland_modinfo_from_values(), when the cvt requested mode has altered width or height (rounding up to vga character width) alters a CVT generated mode and sets [hv]total to [hv]display, and recalculates the dotclock, leaving [hv]sync_[start,end] outside of hdisplay.
This is pretty incongruent.
Either CVT timing is needed, and then CVT rounds up to vga character width, and you can just adjust down [hv]display to increase the blanking, which never hurt anyone.
Or this xwayland timing never hits an actual display engine or display, and then you can forgo CVT timing entirely and set the sync values to [hv]display as well.
The behaviour reported in #1540 (closed), of xwayland_cvt rounding down was not reproducible with the standalone cvt tool on debian stable: libv@quoth:~$ cvt 1366 768
1368x768 59.88 Hz (CVT) hsync: 47.79 kHz; pclk: 85.25 MHz
Modeline "1368x768_60.00" 85.25 1368 1440 1576 1784 768 771 781 798 -hsync +vsync
And when you are at it, s/modinfo/modeinfo/